--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Ejercicio Intermedio JS</title>
 </head>
 <body>
-    <script type="text/javascript" src="./js/main.js"></script>
+    <h1>Juego Piedra, Papel y Tijera</h1>
+    <h2>Introduce aquí tu jugada:</h2>
+    <form>
+        <select class="js-select-option">
+            <option value="default">Seleccione su jugada</option>
+            <option value="stone">Piedra</option>
+            <option value="paper">Papel</option>
+            <option value="scissor">Tijera</option>
+            <button class="js-btn">Jugar</button>
+        </select>
+    </form>
+    <p class="js-result-msg">Vamos a Jugar!</p>
+    <p>Jugador: <span class="js-player-points">0</span></p>
+    <p>Computadora: <span class="js-computer-points">0</span></p>
+    <script type="text/javascript" src="./js/main.j"></script>
 </body>
 </html>
