event addEventListener created

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
             <option value="stone">Piedra</option>
             <option value="paper">Papel</option>
             <option value="scissor">Tijera</option>
-            <button class="js-btn">Jugar</button>
         </select>
+        <button class="js-btn">Jugar</button>
     </form>
     <p class="js-result-msg">Vamos a Jugar!</p>
     <p>Jugador: <span class="js-player-points">0</span></p>
     <p>Computadora: <span class="js-computer-points">0</span></p>
-    <script type="text/javascript" src="./js/main.j"></script>
+
+    <script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
