--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <button class="js-btn">Jugar</button>
     </form>
     <p class="js-result-msg">Vamos a Jugar!</p>
-    <p>Jugador: <span class="js-player-points">0</span></p>
-    <p>Computadora: <span class="js-computer-points">0</span></p>
+    <p>Jugador: <span class="js-player-points"></span></p>
+    <p>Computadora: <span class="js-computer-points"></span></p>
 
     <script type="text/javascript" src="./js/main.js"></script>
 </body>
